--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/error-message": "^2.0.0",
     "@hookform/resolvers": "^2.7.1",
     "@material-ui/core": "^4.11.4",
     "@material-ui/lab": "^4.0.0-alpha.58",
@@ -21,11 +22,13 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/react-select": "^4.0.15",
     "axios": "^0.21.1",
+    "eslint-config-prettier": "^8.3.0",
     "react": "^17.0.2",
     "react-burger-menu": "^3.0.6",
-    "react-datepicker": "^4.1.1",
+    "react-datepicker": "^4.2.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.8.2",
+    "react-hook-form-input": "^1.1.10",
     "react-paginate": "^7.1.3",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
@@ -33,6 +36,7 @@
     "react-select": "^4.3.1",
     "redux": "^4.1.0",
     "styled-components": "^5.3.0",
+    "sweetalert": "^2.1.2",
     "typescript": "^4.3.2",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.9"
@@ -62,6 +66,8 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.10"
+    "@types/styled-components": "^5.1.10",
+    "eslint-plugin-prettier": "^3.4.0",
+    "prettier": "2.3.2"
   }
 }
