--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@types/react-select": "^4.0.15",
     "axios": "^0.21.1",
     "eslint-config-prettier": "^8.3.0",
+    "husky": "^7.0.1",
+    "lint-staged": "^11.1.2",
     "react": "^17.0.2",
     "react-burger-menu": "^3.0.6",
     "react-datepicker": "^4.2.0",
@@ -68,6 +70,6 @@
   "devDependencies": {
     "@types/styled-components": "^5.1.10",
     "eslint-plugin-prettier": "^3.4.0",
-    "prettier": "2.3.2"
+    "prettier": "^2.3.2"
   }
 }
