--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@hookform/error-message": "^2.0.0",
     "@hookform/resolvers": "^2.7.1",
     "@material-ui/core": "^4.11.4",
     "@material-ui/lab": "^4.0.0-alpha.58",
@@ -15,7 +14,6 @@
     "@types/jest": "^26.0.23",
     "@types/node": "^12.20.13",
     "@types/react": "^17.0.8",
-    "@types/react-burger-menu": "^2.8.1",
     "@types/react-datepicker": "^3.1.8",
     "@types/react-dom": "^17.0.5",
     "@types/react-paginate": "^7.1.0",
@@ -24,10 +22,8 @@
     "@types/react-select": "^4.0.15",
     "axios": "^0.21.1",
     "eslint-config-prettier": "^8.3.0",
-    "husky": "^7.0.1",
     "lint-staged": "^11.1.2",
     "react": "^17.0.2",
-    "react-burger-menu": "^3.0.6",
     "react-datepicker": "^4.2.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.8.2",
@@ -40,6 +36,8 @@
     "redux": "^4.1.0",
     "styled-components": "^5.3.0",
     "sweetalert": "^2.1.2",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.3.2",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.9"
@@ -52,8 +50,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
