--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/react-select": "^4.0.15",
     "axios": "^0.21.1",
-    "eslint-config-prettier": "^8.3.0",
     "lint-staged": "^11.1.2",
+    "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-datepicker": "^4.2.0",
     "react-dom": "^17.0.2",
@@ -36,8 +36,6 @@
     "redux": "^4.1.0",
     "styled-components": "^5.3.0",
     "sweetalert": "^2.1.2",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.3.2",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.9"
@@ -50,7 +48,8 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app"
+      "react-app",
+      "react-app/jest"
     ]
   },
   "browserslist": {
@@ -67,7 +66,6 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.10",
-    "eslint-plugin-prettier": "^3.4.0",
-    "prettier": "^2.3.2"
+    "tslint-config-prettier": "^1.18.0"
   }
 }
